...
                                    <textField opaque="NO" clipsSubviews="YES" tag="12" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QnQ-Mx-Luv" userLabel="TextField Name" customClass="CustomTextField">
                                        <rect key="frame" x="148" y="92" width="360" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="customerName">
                                            <accessibilityTraits key="traits" none="YES"/>
                                        </accessibility>
...
                                    <textField opaque="NO" clipsSubviews="YES" tag="14" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jA2-on-LEU" userLabel="TextField Surname" customClass="CustomTextField">
                                        <rect key="frame" x="148" y="136" width="360" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="customerSurname"/>
                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
                                        <textInputTraits key="textInputTraits" keyboardType="alphabet"/>
...
                                    <textField opaque="NO" clipsSubviews="YES" tag="16" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o2F-dh-sR4" userLabel="TextField Address" customClass="CustomTextField">
                                        <rect key="frame" x="148" y="180" width="360" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="customerAddress"/>
                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
                                        <textInputTraits key="textInputTraits" keyboardType="alphabet"/>
...
                                    <textField opaque="NO" clipsSubviews="YES" tag="18" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="International phone number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PZp-LN-EpX" userLabel="TextField Phone" customClass="CustomTextField">
                                        <rect key="frame" x="148" y="224" width="360" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="customerPhone"/>
                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="phonePad"/>
...
                                    <textField opaque="NO" clipsSubviews="YES" tag="20" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bEn-Ur-26E" userLabel="TextField Email" customClass="CustomTextField">
                                        <rect key="frame" x="148" y="268" width="360" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="customerEmail"/>
                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
...
                                        <rect key="frame" x="225" y="320" width="150" height="29"/>
                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="save"/>
                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="14"/>
                                        <state key="normal" title="Save">
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Customers" id="eIF-mg-EYs">
                        <barButtonItem key="rightBarButtonItem" id="rYx-ng-8aU">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="tailTruncation" id="hO7-np-4Bt">
...
