...
        // If the textfield's content is incorrect, paint its border's red.
        self.layer.borderColor=[[UIColor redColor]CGColor];
        
        // Display an exclamation mark button in the invalid textfield,
        // that does nothing when pressed (at the moment...).
        UIButton* overlayButton = [UIButton buttonWithType:UIButtonTypeCustom];
        overlayButton.accessibilityIdentifier = @"exclamation";
        [overlayButton setImage:[UIImage imageNamed:@"exclamation_mark.png"] forState:UIControlStateNormal];
        [overlayButton addTarget:self action:@selector(displayExplanatoryMessage:) forControlEvents:UIControlEventTouchUpInside];
        overlayButton.frame = CGRectMake(0, 0, 28, 28);
        
        // Place the exclamation mark on the right side of the textfield.
        self.rightView = overlayButton;
...
